@@ -18,10 +18,10 @@ systemctl start elasticsearch
 -Xms512m -Xmx512m -Xmn256m
 -XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection
 -XX:NewSize=128m -XX:MaxNewSize=256m -XX:NewRatio=2
--Dspring.config.additional-location=file:./conf/ 
+-Dspring.config.additional-location=file:./conf/
 -Dspring.profiles.active=prod
-
-
+-XX:+UseConcMarkSweepGC -XX:+UseCMSCompactAtFullCollection -XX:CMSInitiatingOccupancyFraction=70 -XX:+CMSParallelRemarkEnabled -XX:SoftRefLRUPolicyMSPerMB=0 -XX:+CMSClassUnloadingEnabled -XX:SurvivorRatio=8  -Xloggc:/etc/nacos/logs/nacos_gc.log -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M
+echo "nohup java -jar -Dspring.profiles.active=prod -Djasypt.encryptor.password=mytc"
 cd /home/java
 
 
